--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Hello World Azure Template</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hello World Azure Template</title>
 </head>
 <body>
-<h1>Azure Static Website Template</h1>
-<p>This page is a sample page for a “Hello World” Azure Static Website Template. The page contains an HTML validation warning. 
-Can you find and fix that warning? What about the curly quotes? Do they current work in all browsers? Can you fix the curly 
-quotes also? And what about proper indenting?</p>
+  <h1>Azure Static Website Template</h1>
+  <p>
+    This page is a sample page for a "Hello World" Azure Static Website Template.
+    The page contained an HTML validation warning. Can you find and fix that warning?
+    What about the curly quotes? Do they currently work in all browsers? The curly
+    quotes have been replaced, and the document is properly indented.
+  </p>
 </body>
 </html>
